<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPastScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40px"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_margin="20px"
                android:text="@string/prevScore"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100px"
                android:layout_marginRight="100px"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:textSize="60px"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/firColumn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info"/>

            <SeekBar
                android:id="@+id/sbDiff"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:thumbTint="#1560bd"
                android:max="3"
                android:progress="0" />

            <TextView
                android:id="@+id/tvSBDiff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="Beginner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100px"
                    android:layout_marginRight="100px"
                    android:gravity="center"
                    android:textSize="60px"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginTop="70px"
                    android:text="@string/secColumn"/>

                <RadioGroup
                    android:id="@+id/RBcal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20px">

                    <RadioButton
                        android:id="@+id/rAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Addition" />

                    <RadioButton
                        android:id="@+id/rSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Subtraction" />

                    <RadioButton
                        android:id="@+id/rMulti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Multiplication" />

                    <RadioButton
                        android:id="@+id/rDiv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Division" />

                    <RadioButton
                        android:id="@+id/rRand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Random" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50px"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="60px"
                    android:textStyle="bold"
                    android:layout_marginBottom="30px"
                    android:text="Timer ( Minutes ) " />

                <SeekBar
                    android:id="@+id/sbTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="#1560bd"
                    android:layout_margin="20px"/>

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="35px"
                    android:textColor="#000000"
                    android:layout_marginBottom="20px"
                    android:text="0 Min" />

                <TextView
                    android:id="@+id/tvHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="35px"
                    android:text="Leave it empty for default timer\nMax: 30 Minutes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRandom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100px"
                    android:layout_marginTop="130px"
                    android:layout_marginRight="100px"
                    android:gravity="center"
                    android:text="@string/thrColumn"
                    android:textColor="#000000"
                    android:textSize="60px"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/sbRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="#1560bd"
                    android:layout_margin="10px"/>

                <TextView
                    android:id="@+id/sbText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0" />

                <EditText
                    android:id="@+id/etRandLimit"
                    android:layout_width="500px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50px"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100px"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_marginBottom="30px"
                android:background="@drawable/btn_rounded"
                android:text="Continue" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>